--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     flex: none;
     flex-direction: column;
     /* flex-wrap: nowrap; */
-    /* gap: 20px; */
+    gap: 30px;
     height: min-content;
     justify-content: flex-start;
     overflow: hidden;
@@ -23,6 +23,7 @@
     z-index: 2;
     align-items: center;
     padding-left: 22%;
+    padding-top: 50px;
 
 }
 
@@ -82,6 +83,22 @@
     margin: 0px;
     padding: 0px;
 }
+.emoji-wave {
+    padding-left: 6px;
+    animation: shake 1.5s;
+}
+@keyframes shake {
+    0% { transform: rotate(0deg); }
+    30% { transform: rotate(-40deg); }
+    30% { transform: rotate(20deg); }
+    40% { transform: rotate(1deg); }
+    50% { transform: rotate(20deg); }
+    60% { transform: rotate(0deg); }
+    70% { transform: rotate(-1deg); }
+    80% { transform: rotate(1deg); }
+    90% { transform: rotate(0deg); }
+
+  }
 .small-headline {
     display: flex;
     flex-direction: row;
@@ -111,14 +128,31 @@ img {
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    height: min-content;
+    height: 25px;
     justify-content: space-between;
     overflow: visible;
     padding: 16px;
     position: relative;
 
-    width: 80%;
+    width: 90%;
 
+    /* background: gray;
+    opacity: 0.3;
+    border-radius: 15px; */
+
+}
+
+.backdrop {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    background: #DCD6D0;
+    opacity: 0.3;
+    border-radius: 13px;
+    height: 90%;
+    border-style: solid;
+    border-color: silver;
+    border-width: 1px;
 }
 
 .nav-links {
@@ -160,16 +194,17 @@ ion-icon {
 
 
 .bullets {
-    color: black;
+    color: #000000;
     text-decoration: none;
     text-decoration-color: white;
     transition: opacity 0.2s;
 
+    padding-left: 30px;
 }
 
 .bullets:hover {
     /* color: darkgray; */
-    opacity: 0.7;
+    opacity: 0.6;
     /* text-shadow: 1ch; */
 }
 
