--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-
 /**ADD INTER FONT HERE!!!**/
   @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
   body {
     font-family: 'Inter', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
 
 .overall {
@@ -13,24 +16,38 @@
     /* flex-wrap: nowrap; */
     gap: 30px;
     height: min-content;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
     /* overflow-y: scroll; */
     padding: 24px;
 
     position: relative;
     width: 708px;
+
     /* width: 800px; */
     z-index: 2;
-    align-items: center;
-    padding-left: 22%;
+    /* padding-left: 22%; */
     padding-top: 50px;
 
 
     /* transition: width 2s; */
     transition: .2s cubic-bezier(.54,-.01,.6,1.01);
 
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 0.5s ease forwards;
+    align-items: center;
+
 }
+  
+@keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 
 .main-text {
     align-items: flex-start;
@@ -46,7 +63,7 @@
     position: relative;
     width: 100%;
 
-    padding-left: 24%;
+    /* padding-left: 24%; */
 
 }
 
@@ -137,7 +154,8 @@
     padding: 16px;
     position: relative;
 
-    width: 90%;
+    /* width: 90%; */
+    width: 708px;
 
     /* background: gray;
     opacity: 0.3;
@@ -166,6 +184,7 @@
     justify-content: flex-start;
     /* padding-left: -40px; */
     padding: 0px;
+    
 }
 
 .menu-right {
@@ -433,4 +452,28 @@ ion-icon {
   
 
 
+  
+
+  /* ... Existing styles ... */
+
+/* Style for the link container */
+.popup-link {
+    display: flex;
+    flex-direction: column; /* This will stack the links vertically */
+    gap: 0.5rem; /* Adjust the gap between the links as needed */
+  }
+  
+  /* Style for the individual links */
+  .popup-link a {
+    display: block; /* Make each link a block-level element */
+    text-decoration: none;
+    color: darkslateblue;
+    font-size: 14px;
+    /* Add any other styles you want for the links */
+  }
+  .popup-link a:hover  {
+    color: darkblue;
+  }
+  
+  /* ... Existing styles ... */
   
